--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="prompt-container">
                 <button class="copy-btn" title="Copy Prompt" onclick="copyAction(this)"><i class="fa-regular fa-copy"></i></button>
                 <div class="prompt-content" onclick="copyAction(this)">
-                    <span class="prompt-text">"Analyze the attached tracking sheet. Identify the top 3 concepts mastered and the top 2 where a significant performance gap exists across the class. Which students show a high pre-test score but struggled with the final assessment?"</span>
+                    <span class="prompt-text">"Analyse the attached tracking sheet. Identify the top 3 concepts mastered and the top 2 where a significant performance gap exists across the class. Which students show a high pre-test score but struggled with the final assessment?"</span>
                 </div>
             </div>
 
